--- a/packages/firstcut-salesforce-api/package.json
+++ b/packages/firstcut-salesforce-api/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "firstcut-utils",
+  "name": "firstcut-salesforce-api",
   "private": true,
   "version": "0.0.0",
   "main": "lib/index.js",
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.51",
-    "crypto": "^1.0.1",
+    "firstcut-models": "^0.0.0",
+    "jsforce": "^1.9.0",
     "lodash": "^4.17.10",
-    "remove": "^0.1.5",
-    "simpl-schema": "^1.5.0"
+    "prettyjson": "^1.2.1",
+    "xml2json": "^0.11.2"
   }
 }
