--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 				"eslint-plugin-react": "^7.10.0",
 				"html-loader": "^0.5.5",
 				"html-webpack-plugin": "^3.0.6",
-				"jest": "^22.4.4",
+				"jest": "^23.6.0",
 				"lerna": "^2.11.0",
 				"source-map-loader": "^0.2.3",
 				"webpack": "^4.1.1",
@@ -31,11 +31,12 @@
 		},
 		"scripts": {
 				"prebuild": "git clean -fdx packages -e packages/*/node_modules",
+				"clean": "lerna clean | rm -rf packages/*/lib",
 				"bootstrap": "lerna bootstrap",
 				"dev": "concurrently \"yarn watch\" \"lerna run dev --stream\"",
 				"lint": "eslint --cache --ignore-path .gitignore ./packages/*/src",
 				"test": "jest",
-				"build:babel": "lerna exec --parallel -- babel src -d lib --config-file ../../.babelrc --watch --copy-files",
+				"build:babel": "lerna exec --parallel -- babel src -d lib --config-file ../../.babelrc --watch --copy-files --delete-dir-on-start",
 				"build:webpack": "lerna run build:webpack",
 				"build": "yarn build:babel && yarn build:webpack",
 				"release": "yarn lint && yarn build && lerna publish",
