--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,8 @@
 {
   "lerna": "3.4.0",
   "packages": [
-    "packages/*"
+    "packages/*",
+    "apps/*"
   ],
   "npmClient": "npm",
   "version": "independent"
