--- a/packages/firstcut-companies/package.json
+++ b/packages/firstcut-companies/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "main": "lib/index.js",
   "dependencies": {
-    "firstcut-model-base": "^0.0.0",
-    "firstcut-schema": "^0.0.0"
+    "@babel/runtime": "^7.1.2",
+    "firstcut-model-base": "file:../firstcut-model-base",
+    "firstcut-schema": "file:../firstcut-schema"
   }
 }
