--- a/packages/firstcut-action-utils/package.json
+++ b/packages/firstcut-action-utils/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "main": "lib/index.js",
   "dependencies": {
-    "firstcut-pipeline-consts": "^0.0.0"
+    "@babel/runtime": "^7.1.2",
+    "firstcut-pipeline-consts": "file:../firstcut-pipeline-consts"
   }
 }
