--- a/packages/firstcut-actions/package.json
+++ b/packages/firstcut-actions/package.json
@@ -4,8 +4,13 @@
   "version": "0.0.0",
   "main": "lib/index.js",
   "dependencies": {
-    "firstcut-action-utils": "^0.0.0",
-    "firstcut-pipeline-consts": "^0.0.0",
-    "firstcut-utils": "^0.0.0"
+    "@babel/runtime": "^7.1.2",
+    "firstcut-action-utils": "file:../firstcut-action-utils",
+    "firstcut-models": "file:../firstcut-models",
+    "firstcut-pipeline-consts": "file:../firstcut-pipeline-consts",
+    "firstcut-players": "file:../firstcut-players",
+    "firstcut-retrieve-url": "file:../firstcut-retrieve-url",
+    "firstcut-schema": "file:../firstcut-schema",
+    "firstcut-utils": "file:../firstcut-utils"
   }
 }
