--- a/packages/firstcut-assets/package.json
+++ b/packages/firstcut-assets/package.json
@@ -4,9 +4,10 @@
   "version": "0.0.0",
   "main": "lib/index.js",
   "dependencies": {
-    "firstcut-model-base": "^0.0.0",
-    "firstcut-schema": "^0.0.0",
-    "firstcut-uploader": "^0.0.0",
+    "@babel/runtime": "^7.1.2",
+    "firstcut-model-base": "file:../firstcut-model-base",
+    "firstcut-schema": "file:../firstcut-schema",
+    "firstcut-uploader": "file:../firstcut-uploader",
     "sanitize-filename": "^1.6.1"
   }
 }
