--- a/packages/firstcut-billing/package.json
+++ b/packages/firstcut-billing/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "main": "lib/index.js",
   "dependencies": {
+    "@babel/runtime": "^7.1.2",
     "stripe": "^6.12.1"
   }
 }
