--- a/packages/firstcut-blueprints/package.json
+++ b/packages/firstcut-blueprints/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "main": "lib/index.js",
   "dependencies": {
-    "firstcut-schema": "^0.0.0"
+    "@babel/runtime": "^7.1.2",
+    "firstcut-schema": "file:../firstcut-schema"
   }
 }
