--- a/packages/firstcut-collaborators/package.json
+++ b/packages/firstcut-collaborators/package.json
@@ -4,9 +4,11 @@
   "version": "0.0.0",
   "main": "lib/index.js",
   "dependencies": {
-    "firstcut-model-base": "^0.0.0",
-    "firstcut-pipeline-consts": "^0.0.0",
-    "firstcut-schema": "^0.0.0",
-    "lodash": "^4.17.11"
+    "@babel/runtime": "^7.1.2",
+    "firstcut-model-base": "file:../firstcut-model-base",
+    "firstcut-pipeline-consts": "file:../firstcut-pipeline-consts",
+    "firstcut-schema": "file:../firstcut-schema",
+    "lodash": "^4.17.11",
+    "simpl-schema": "^1.5.3"
   }
 }
