--- a/packages/firstcut-google-api/package.json
+++ b/packages/firstcut-google-api/package.json
@@ -4,6 +4,6 @@
   "version": "0.0.0",
   "main": "lib/index.js",
   "dependencies": {
-    "@babel/runtime": "7.0.0-beta.55"
+    "@babel/runtime": "^7.1.2"
   }
 }
