--- a/packages/firstcut-jobs/package.json
+++ b/packages/firstcut-jobs/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "main": "lib/index.js",
   "dependencies": {
-    "@babel/runtime": "7.0.0-beta.55",
-    "firstcut-model-base": "^0.0.0",
-    "firstcut-schema": "^0.0.0"
+    "@babel/runtime": "^7.1.2",
+    "firstcut-model-base": "file:../firstcut-model-base",
+    "firstcut-schema": "file:../firstcut-schema",
+    "node-schedule": "^1.3.0"
   }
 }
