--- a/packages/firstcut-mailer/package.json
+++ b/packages/firstcut-mailer/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "main": "lib/index.js",
   "dependencies": {
-    "@babel/runtime": "7.0.0-beta.55"
+    "@babel/runtime": "^7.1.2",
+    "sparkpost": "^2.1.2"
   }
 }
