--- a/packages/firstcut-pipeline-consts/package.json
+++ b/packages/firstcut-pipeline-consts/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "main": "lib/index.js",
   "dependencies": {
-    "@babel/runtime": "7.0.0-beta.55",
-    "firstcut-google-api": "^0.0.0",
+    "@babel/runtime": "^7.1.2",
+    "firstcut-google-api": "file:../firstcut-google-api",
     "immutable": "^3.8.2"
   }
 }
