--- a/packages/firstcut-pipeline/package.json
+++ b/packages/firstcut-pipeline/package.json
@@ -4,16 +4,19 @@
   "version": "0.0.0",
   "main": "lib/index.js",
   "dependencies": {
-    "@babel/runtime": "7.0.0-beta.55",
-    "firstcut-actions": "^0.0.0",
-    "firstcut-billing": "^0.0.0",
-    "firstcut-calendar": "^0.0.0",
-    "firstcut-mailer": "^0.0.0",
-    "firstcut-models": "^0.0.0",
-    "firstcut-retrieve-url": "^0.0.0",
-    "firstcut-slack": "^0.0.0",
-    "firstcut-text-messaging": "^0.0.0",
-    "firstcut-utils": "^0.0.0",
+    "@babel/runtime": "^7.1.2",
+    "firstcut-actions": "file:../firstcut-actions",
+    "firstcut-billing": "file:../firstcut-billing",
+    "firstcut-calendar": "file:../firstcut-calendar",
+    "firstcut-mailer": "file:../firstcut-mailer",
+    "firstcut-models": "file:../firstcut-models",
+    "firstcut-pipeline-consts": "file:../firstcut-pipeline-consts",
+    "firstcut-players": "file:../firstcut-players",
+    "firstcut-retrieve-url": "file:../firstcut-retrieve-url",
+    "firstcut-schema": "file:../firstcut-schema",
+    "firstcut-slack": "file:../firstcut-slack",
+    "firstcut-text-messaging": "file:../firstcut-text-messaging",
+    "firstcut-utils": "file:../firstcut-utils",
     "meteor-standalone-random": "^1.0.67"
   }
 }
