--- a/packages/firstcut-projects/package.json
+++ b/packages/firstcut-projects/package.json
@@ -4,12 +4,12 @@
   "version": "0.0.0",
   "main": "lib/index.js",
   "dependencies": {
-    "@babel/runtime": "7.0.0-beta.55",
-    "firstcut-action-utils": "^0.0.0",
-    "firstcut-blueprints": "^0.0.0",
-    "firstcut-google-api": "^0.0.0",
-    "firstcut-model-base": "^0.0.0",
-    "firstcut-pipeline-consts": "^0.0.0",
-    "firstcut-schema": "^0.0.0"
+    "@babel/runtime": "^7.1.2",
+    "firstcut-action-utils": "file:../firstcut-action-utils",
+    "firstcut-blueprints": "file:../firstcut-blueprints",
+    "firstcut-google-api": "file:../firstcut-google-api",
+    "firstcut-model-base": "file:../firstcut-model-base",
+    "firstcut-pipeline-consts": "file:../firstcut-pipeline-consts",
+    "firstcut-schema": "file:../firstcut-schema"
   }
 }
