--- a/packages/firstcut-slack/package.json
+++ b/packages/firstcut-slack/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "main": "lib/index.js",
   "dependencies": {
-    "@babel/runtime": "7.0.0-beta.55",
-    "firstcut-google-api": "^0.0.0"
+    "@babel/runtime": "^7.1.2",
+    "@slack/client": "^4.8.0",
+    "firstcut-google-api": "file:../firstcut-google-api"
   }
 }
