--- a/packages/firstcut-uploader/package.json
+++ b/packages/firstcut-uploader/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "main": "lib/index.js",
   "dependencies": {
-    "@babel/runtime": "7.0.0-beta.55",
+    "@babel/runtime": "^7.1.2",
     "aws-sdk": "^2.327.0"
   }
 }
