--- a/packages/firstcut-model-base/package.json
+++ b/packages/firstcut-model-base/package.json
@@ -8,6 +8,7 @@
     "firstcut-action-utils": "file:../firstcut-action-utils",
     "firstcut-retrieve-url": "file:../firstcut-retrieve-url",
     "firstcut-schema": "file:../firstcut-schema",
-    "firstcut-utils": "file:../firstcut-utils"
+    "firstcut-utils": "file:../firstcut-utils",
+    "pubsub-js": "^1.7.0"
   }
 }
