--- a/package.json
+++ b/package.json
@@ -1,34 +1,37 @@
 {
 		"private": true,
 		"homepage": "https://dmk255.github.io/lerna-webpack-example/",
+		"publishConfig": {
+    	"access": "private"
+  	},
 		"devDependencies": {
-    	"@babel/runtime": "^7.1.2",
-			"@babel/cli": "^7.0.0-beta.51",
-			"@babel/core": "^7.0.0-beta.51",
-			"@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.51",
-			"@babel/plugin-transform-runtime": "^7.0.0-beta.51",
-			"@babel/preset-env": "^7.0.0-beta.51",
-			"@babel/preset-react": "^7.0.0-beta.51",
-			"babel-core": "^7.0.0-beta.51",
-			"babel-eslint": "^8.2.2",
-			"babel-jest": "^23.0.0-alpha.0",
-			"babel-loader": "^8.0.0-beta",
-			"babel-polyfill": "^6.26.0",
-			"concurrently": "^3.5.1",
-			"eslint": "^4.19.1",
-			"eslint-config-airbnb": "^17.0.0",
-			"eslint-plugin-import": "^2.13.0",
-			"eslint-plugin-jest": "^21.15.0",
-			"eslint-plugin-jsx-a11y": "^6.1.1",
-			"eslint-plugin-react": "^7.10.0",
-			"html-loader": "^0.5.5",
-			"html-webpack-plugin": "^3.0.6",
-			"jest": "^23.6.0",
-			"lerna": "^3.4.0",
-			"source-map-loader": "^0.2.3",
-			"webpack": "^4.1.1",
-			"webpack-cli": "^2.0.12",
-			"webpack-dev-server": "^3.1.1"
+				"@babel/runtime": "^7.1.2",
+				"@babel/cli": "^7.0.0-beta.51",
+				"@babel/core": "^7.0.0-beta.51",
+				"@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.51",
+				"@babel/plugin-transform-runtime": "^7.0.0-beta.51",
+				"@babel/preset-env": "^7.0.0-beta.51",
+				"@babel/preset-react": "^7.0.0-beta.51",
+				"babel-core": "^7.0.0-beta.51",
+				"babel-eslint": "^8.2.2",
+				"babel-jest": "^23.0.0-alpha.0",
+				"babel-loader": "^8.0.0-beta",
+				"babel-polyfill": "^6.26.0",
+				"concurrently": "^3.5.1",
+				"eslint": "^4.19.1",
+				"eslint-config-airbnb": "^17.0.0",
+				"eslint-plugin-import": "^2.13.0",
+				"eslint-plugin-jest": "^21.15.0",
+				"eslint-plugin-jsx-a11y": "^6.1.1",
+				"eslint-plugin-react": "^7.10.0",
+				"html-loader": "^0.5.5",
+				"html-webpack-plugin": "^3.0.6",
+				"jest": "^23.6.0",
+				"lerna": "^3.4.0",
+				"source-map-loader": "^0.2.3",
+				"webpack": "^4.1.1",
+				"webpack-cli": "^2.0.12",
+				"webpack-dev-server": "^3.1.1"
 		},
 		"scripts": {
 				"prebuild": "git clean -fdx packages -e packages/*/node_modules",
@@ -46,24 +49,23 @@
 				"clean:babel": "rm -rf packages/*/lib",
 				"deploy": "gh-pages -d packages/orchestra/dist"
 		},
-		"workspaces": {
-			"packages": ["packages/*"]
-		},
 		"dependencies": {
 				"meteor-standalone-random": "^1.0.67",
 				"soap": "^0.24.0"
 		},
 		"jest": {
-			"moduleNameMapper": {
-    		"meteor/meteor": "<rootDir>/jest/mocks/meteor.mock.js"
-  		},
-			"setupFiles": [
-		    "<rootDir>/jest/globals.js"
-		  ],
-			"testPathIgnorePatterns": [
-				"/node_modules/",
-				"/lib/"
-			],
-			"bail": true
+				"moduleNameMapper": {
+						"meteor/meteor": "<rootDir>/jest/mocks/meteor.mock.js",
+						"meteor/mongo": "<rootDir>/jest/mocks/mongo.mock.js",
+						"meteor/mdg:validated-method": "<rootDir>/jest/mocks/validatedmethod.mock.js"
+				},
+				"setupFiles": [
+						"<rootDir>/jest/globals.js"
+				],
+				"testPathIgnorePatterns": [
+						"/node_modules/",
+						"/lib/"
+				],
+				"bail": true
 		}
 }
