--- a/packages/firstcut-filestore/package.json
+++ b/packages/firstcut-filestore/package.json
@@ -5,6 +5,7 @@
   "main": "lib/index.js",
   "dependencies": {
     "@babel/runtime": "^7.1.2",
+    "firstcut-aws": "file:../firstcut-aws",
     "simpl-schema": "^1.5.3"
   }
 }
