--- a/apps/firstcut-salesforce-api/package.json
+++ b/apps/firstcut-salesforce-api/package.json
@@ -2,7 +2,7 @@
   "name": "firstcut-salesforce-api",
   "private": true,
   "version": "0.0.0",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "dependencies": {
     "@babel/runtime": "^7.1.2",
     "lodash": "^4.17.10"
