--- a/packages/firstcut-billing/package.json
+++ b/packages/firstcut-billing/package.json
@@ -2,7 +2,7 @@
   "name": "firstcut-billing",
   "private": true,
   "version": "0.0.0",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "dependencies": {
     "@babel/runtime": "^7.1.2",
     "stripe": "^6.12.1"
