--- a/packages/firstcut-blueprints/package.json
+++ b/packages/firstcut-blueprints/package.json
@@ -2,7 +2,7 @@
   "name": "firstcut-blueprints",
   "private": true,
   "version": "0.0.0",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "dependencies": {
     "@babel/runtime": "^7.1.2",
     "firstcut-schema": "file:../firstcut-schema"
