--- a/packages/firstcut-companies/package.json
+++ b/packages/firstcut-companies/package.json
@@ -2,7 +2,7 @@
   "name": "firstcut-companies",
   "private": true,
   "version": "0.0.0",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "dependencies": {
     "@babel/runtime": "^7.1.2",
     "firstcut-model-base": "file:../firstcut-model-base",
