--- a/packages/firstcut-filestore/package.json
+++ b/packages/firstcut-filestore/package.json
@@ -2,10 +2,9 @@
   "name": "firstcut-filestore",
   "private": true,
   "version": "0.0.0",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "dependencies": {
     "@babel/runtime": "^7.1.2",
-    "firstcut-aws": "file:../firstcut-aws",
     "simpl-schema": "^1.5.3"
   }
 }
