--- a/packages/firstcut-mailer/package.json
+++ b/packages/firstcut-mailer/package.json
@@ -2,7 +2,7 @@
   "name": "firstcut-mailer",
   "private": true,
   "version": "0.0.0",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "dependencies": {
     "@babel/runtime": "^7.1.2",
     "sparkpost": "^2.1.2"
