--- a/packages/firstcut-pipeline-consts/package.json
+++ b/packages/firstcut-pipeline-consts/package.json
@@ -2,7 +2,7 @@
   "name": "firstcut-pipeline-consts",
   "private": true,
   "version": "0.0.0",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "dependencies": {
     "@babel/runtime": "^7.1.2",
     "firstcut-google-api": "file:../firstcut-google-api",
