--- a/packages/firstcut-react-autoform/package.json
+++ b/packages/firstcut-react-autoform/package.json
@@ -2,7 +2,7 @@
   "name": "firstcut-react-autoform",
   "private": true,
   "version": "0.0.0",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "dependencies": {
     "@babel/runtime": "^7.1.2",
     "firstcut-models": "file:../firstcut-models",
