--- a/packages/firstcut-slack/package.json
+++ b/packages/firstcut-slack/package.json
@@ -2,7 +2,7 @@
   "name": "firstcut-slack",
   "private": true,
   "version": "0.0.0",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "dependencies": {
     "@babel/runtime": "^7.1.2",
     "@slack/client": "^4.8.0",
