--- a/packages/firstcut-aws/package.json
+++ b/packages/firstcut-aws/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "firstcut-filestore",
+  "name": "firstcut-aws",
   "private": true,
   "version": "0.0.0",
   "main": "lib/index.js",
   "dependencies": {
     "@babel/runtime": "^7.1.2",
-    "firstcut-aws": "file:../firstcut-aws",
-    "simpl-schema": "^1.5.3"
+    "aws-sdk": "^2.327.0"
   }
 }
