omg it 9038429 rendered

--- a/packages/firstcut-pipeline-utils/package.json
+++ b/packages/firstcut-pipeline-utils/package.json
@@ -7,6 +7,7 @@
     "@babel/runtime": "^7.1.2",
     "firstcut-actions": "file:../firstcut-actions",
     "firstcut-pipeline-consts": "file:../firstcut-pipeline-consts",
-    "firstcut-schema": "file:../firstcut-schema"
+    "firstcut-schema": "file:../firstcut-schema",
+    "firstcut-user-session": "file:../firstcut-user-session"
   }
 }
