--- a/packages/firstcut-analytics/package.json
+++ b/packages/firstcut-analytics/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@babel/runtime": "^7.1.2",
     "firstcut-pipeline-consts": "file:../firstcut-pipeline-consts",
+    "firstcut-user-session": "file:../firstcut-user-session",
     "lodash": "^4.17.11"
   }
 }
