--- a/packages/firstcut-assets/package.json
+++ b/packages/firstcut-assets/package.json
@@ -8,6 +8,7 @@
     "firstcut-model-base": "file:../firstcut-model-base",
     "firstcut-schema": "file:../firstcut-schema",
     "lodash": "^4.17.11",
+    "mdbid": "^1.0.0",
     "sanitize-filename": "^1.6.1"
   }
 }
