--- a/packages/firstcut-pipeline-utils/package.json
+++ b/packages/firstcut-pipeline-utils/package.json
@@ -8,6 +8,7 @@
     "firstcut-actions": "file:../firstcut-actions",
     "firstcut-pipeline-consts": "file:../firstcut-pipeline-consts",
     "firstcut-schema": "file:../firstcut-schema",
-    "firstcut-user-session": "file:../firstcut-user-session"
+    "firstcut-user-session": "file:../firstcut-user-session",
+    "lodash": "^4.17.11"
   }
 }
