--- a/packages/firstcut-pipeline-consts/package.json
+++ b/packages/firstcut-pipeline-consts/package.json
@@ -5,7 +5,10 @@
   "main": "lib/index.js",
   "dependencies": {
     "@babel/runtime": "^7.1.2",
+    "firstcut-calendar": "file:../firstcut-calendar",
+    "firstcut-slack": "file:../firstcut-slack",
     "immutable": "^3.8.2",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "simpl-schema": "^1.5.3"
   }
 }
