--- a/packages/firstcut-react-autoform/package.json
+++ b/packages/firstcut-react-autoform/package.json
@@ -7,6 +7,14 @@
     "@babel/runtime": "^7.1.2",
     "firstcut-schema": "file:../firstcut-schema",
     "lodash": "^4.17.11",
-    "moment": "^2.22.2"
+    "moment": "^2.22.2",
+    "prop-types": "^15.6.2",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-google-autocomplete": "^1.0.16"
+  },
+  "devDependencies": {
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0"
   }
 }
