--- a/packages/firstcut-react-autoform/package.json
+++ b/packages/firstcut-react-autoform/package.json
@@ -11,7 +11,8 @@
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-google-autocomplete": "^1.0.16"
+    "react-google-autocomplete": "^1.0.16",
+    "react-test-renderer": "^16.5.2"
   },
   "devDependencies": {
     "enzyme": "^3.7.0",
