--- a/packages/app-dashboard/package.json
+++ b/packages/app-dashboard/package.json
@@ -15,6 +15,7 @@
     "crypto-js": "^3.1.9-1",
     "detect-browser": "^3.0.0",
     "electron": "^1.8.7",
+    "enzyme": "^3.7.0",
     "evaporate": "^2.1.4",
     "firstcut-action-utils": "^0.0.0",
     "firstcut-actions": "^0.0.0",
