--- a/packages/firstcut-react-autoform/package.json
+++ b/packages/firstcut-react-autoform/package.json
@@ -12,7 +12,8 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-google-autocomplete": "^1.0.16",
-    "react-test-renderer": "^16.5.2"
+    "react-test-renderer": "^16.5.2",
+    "semantic-ui-react": "^0.82.5"
   },
   "devDependencies": {
     "enzyme": "^3.7.0",
