link and install scripts"

--- a/packages/app-dashboard/package.json
+++ b/packages/app-dashboard/package.json
@@ -2,7 +2,10 @@
   "name": "firstcut-dashboard",
   "private": true,
   "scripts": {
-    "start": "meteor run --settings settings-dev.json",
+    "start": "./linkfirstcut.sh && meteor run --settings settings-dev.json",
+    "start-prod": "./linkfirstcut.sh && meteor run --settings settings.json",
+    "test": "./installfirstcut.sh && meteor test --driver-package meteortesting:mocha --settings settings-dev.json SERVER_TEST_REPORTER='dot'",
+    "test-prod": "./installfirstcut.sh && meteor test --driver-package meteortesting:mocha --settings settings.json SERVER_TEST_REPORTER='dot'",
     "deploy-prod": "meteor deploy firstcut.meteorapp.com",
     "deploy-dev": "meteor deploy firstcut-dev.meteorapp.com"
   },
@@ -22,6 +25,7 @@
     "firstcut-analytics": "file:../firstcut-analytics",
     "firstcut-assets": "file:../firstcut-assets",
     "firstcut-aws": "file:../firstcut-aws",
+    "firstcut-blueprints": "file:../firstcut-blueprints",
     "firstcut-clients": "file:../firstcut-clients",
     "firstcut-collaborators": "file:../firstcut-collaborators",
     "firstcut-companies": "file:../firstcut-companies",
@@ -38,11 +42,13 @@
     "firstcut-players": "file:../firstcut-players",
     "firstcut-projects": "file:../firstcut-projects",
     "firstcut-react-autoform": "file:../firstcut-react-autoform",
+    "firstcut-retrieve-url": "file:../firstcut-retrieve-url",
     "firstcut-schema": "file:../firstcut-schema",
     "firstcut-shoots": "file:../firstcut-shoots",
     "firstcut-tasks": "file:../firstcut-tasks",
     "firstcut-uploader": "file:../firstcut-uploader",
     "firstcut-user-session": "file:../firstcut-user-session",
+    "firstcut-utils": "file:../firstcut-utils",
     "github": "^14.0.0",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
