--- a/packages/firstcut-utils/package.json
+++ b/packages/firstcut-utils/package.json
@@ -6,6 +6,6 @@
   "dependencies": {
     "@babel/runtime": "^7.1.2",
     "lodash": "^4.17.11",
-    "moment": "^2.22.2"
+    "moment-timezone": "^0.5.21"
   }
 }
