--- a/packages/firstcut-react-autoform/package.json
+++ b/packages/firstcut-react-autoform/package.json
@@ -7,7 +7,7 @@
     "@babel/runtime": "^7.1.2",
     "firstcut-schema": "file:../firstcut-schema",
     "lodash": "^4.17.11",
-    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
