--- a/packages/app-dashboard/package.json
+++ b/packages/app-dashboard/package.json
@@ -13,42 +13,13 @@
     "@babel/runtime": "^7.1.2",
     "@slack/client": "^4.8.0",
     "aws-sdk": "^2.327.0",
-    "bcrypt": "^3.0.1",
+    "bcrypt": "^3.0.2",
     "bufferutil": "^3.0.5",
     "crypto-js": "^3.1.9-1",
     "detect-browser": "^3.0.0",
     "electron": "^1.8.7",
     "enzyme": "^3.7.0",
     "evaporate": "^2.1.4",
-    "firstcut-action-utils": "file:../firstcut-action-utils",
-    "firstcut-actions": "file:../firstcut-actions",
-    "firstcut-analytics": "file:../firstcut-analytics",
-    "firstcut-assets": "file:../firstcut-assets",
-    "firstcut-aws": "file:../firstcut-aws",
-    "firstcut-blueprints": "file:../firstcut-blueprints",
-    "firstcut-clients": "file:../firstcut-clients",
-    "firstcut-collaborators": "file:../firstcut-collaborators",
-    "firstcut-companies": "file:../firstcut-companies",
-    "firstcut-cuts": "file:../firstcut-cuts",
-    "firstcut-deliverables": "file:../firstcut-deliverables",
-    "firstcut-filestore": "file:../firstcut-filestore",
-    "firstcut-google-api": "file:../firstcut-google-api",
-    "firstcut-invoices": "file:../firstcut-invoices",
-    "firstcut-jobs": "file:../firstcut-jobs",
-    "firstcut-model-base": "file:../firstcut-model-base",
-    "firstcut-pipeline": "file:../firstcut-pipeline",
-    "firstcut-pipeline-consts": "file:../firstcut-pipeline-consts",
-    "firstcut-pipeline-utils": "file:../firstcut-pipeline-utils",
-    "firstcut-players": "file:../firstcut-players",
-    "firstcut-projects": "file:../firstcut-projects",
-    "firstcut-react-autoform": "file:../firstcut-react-autoform",
-    "firstcut-retrieve-url": "file:../firstcut-retrieve-url",
-    "firstcut-schema": "file:../firstcut-schema",
-    "firstcut-shoots": "file:../firstcut-shoots",
-    "firstcut-tasks": "file:../firstcut-tasks",
-    "firstcut-uploader": "file:../firstcut-uploader",
-    "firstcut-user-session": "file:../firstcut-user-session",
-    "firstcut-utils": "file:../firstcut-utils",
     "github": "^14.0.0",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
@@ -80,7 +51,36 @@
     "stripe": "^6.12.1",
     "twilio": "^3.22.0",
     "url-search-params-polyfill": "^4.0.0",
-    "utf-8-validate": "^4.0.2"
+    "utf-8-validate": "^4.0.2",
+    "firstcut-action-utils": "^0.0.0",
+    "firstcut-actions": "^0.0.0",
+    "firstcut-analytics": "^0.0.0",
+    "firstcut-assets": "^0.0.0",
+    "firstcut-aws": "^0.0.0",
+    "firstcut-blueprints": "^0.0.0",
+    "firstcut-clients": "^0.0.0",
+    "firstcut-collaborators": "^0.0.0",
+    "firstcut-companies": "^0.0.0",
+    "firstcut-cuts": "^0.0.0",
+    "firstcut-deliverables": "^0.0.0",
+    "firstcut-filestore": "^0.0.0",
+    "firstcut-google-api": "^0.0.0",
+    "firstcut-invoices": "^0.0.0",
+    "firstcut-jobs": "^0.0.0",
+    "firstcut-model-base": "^0.0.0",
+    "firstcut-pipeline": "^0.0.0",
+    "firstcut-pipeline-consts": "^0.0.0",
+    "firstcut-pipeline-utils": "^0.0.0",
+    "firstcut-players": "^0.0.0",
+    "firstcut-projects": "^0.0.0",
+    "firstcut-react-autoform": "^0.0.0",
+    "firstcut-retrieve-url": "^0.0.0",
+    "firstcut-schema": "^0.0.0",
+    "firstcut-shoots": "^0.0.0",
+    "firstcut-tasks": "^0.0.0",
+    "firstcut-uploader": "^0.0.0",
+    "firstcut-utils": "^0.0.0",
+    "firstcut-user-session": "^0.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.1",
