--- a/packages/app-dashboard/package.json
+++ b/packages/app-dashboard/package.json
@@ -6,7 +6,7 @@
     "start-prod": "./linkfirstcut.sh && meteor run --settings settings.json",
     "test": "./installfirstcut.sh && meteor test --driver-package meteortesting:mocha --settings settings-dev.json SERVER_TEST_REPORTER='dot'",
     "test-prod": "./installfirstcut.sh && meteor test --driver-package meteortesting:mocha --settings settings.json SERVER_TEST_REPORTER='dot'",
-    "deploy-prod": "meteor deploy firstcut.meteorapp.com",
+    "deploy-prod": "./installfirstcut.sh && meteor deploy firstcut.meteorapp.com",
     "deploy-dev": "./installfirstcut.sh && meteor deploy firstcut-dev.meteorapp.com"
   },
   "dependencies": {
