landing page submit + confirmation modal

--- a/packages/app-dashboard/package.json
+++ b/packages/app-dashboard/package.json
@@ -32,10 +32,12 @@
     "firstcut-companies": "file:../firstcut-companies",
     "firstcut-cuts": "file:../firstcut-cuts",
     "firstcut-deliverables": "file:../firstcut-deliverables",
+    "firstcut-event-emitter": "file:../firstcut-event-emitter",
     "firstcut-filestore": "file:../firstcut-filestore",
     "firstcut-google-api": "file:../firstcut-google-api",
     "firstcut-invoices": "file:../firstcut-invoices",
     "firstcut-jobs": "file:../firstcut-jobs",
+    "firstcut-landingpage-requests": "file:../firstcut-landingpage-requests",
     "firstcut-mailer": "file:../firstcut-mailer",
     "firstcut-model-base": "file:../firstcut-model-base",
     "firstcut-pipeline": "file:../firstcut-pipeline",
