updates to shoot scripts

--- a/packages/app-dashboard/package.json
+++ b/packages/app-dashboard/package.json
@@ -51,40 +51,7 @@
     "stripe": "^6.12.1",
     "twilio": "^3.22.0",
     "url-search-params-polyfill": "^4.0.0",
-    "utf-8-validate": "^4.0.2",
-    "firstcut-action-utils": "^0.0.0",
-    "firstcut-actions": "^0.0.0",
-    "firstcut-analytics": "^0.0.0",
-    "firstcut-assets": "^0.0.0",
-    "firstcut-aws": "^0.0.0",
-    "firstcut-blueprints": "^0.0.0",
-    "firstcut-clients": "^0.0.0",
-    "firstcut-collaborators": "^0.0.0",
-    "firstcut-companies": "^0.0.0",
-    "firstcut-cuts": "^0.0.0",
-    "firstcut-deliverables": "^0.0.0",
-    "firstcut-filestore": "^0.0.0",
-    "firstcut-google-api": "^0.0.0",
-    "firstcut-invoices": "^0.0.0",
-    "firstcut-mailer": "^0.0.0",
-    "firstcut-calendar": "^0.0.0",
-    "firstcut-jobs": "^0.0.0",
-    "firstcut-model-base": "^0.0.0",
-    "firstcut-pipeline": "^0.0.0",
-    "firstcut-pipeline-consts": "^0.0.0",
-    "firstcut-pipeline-utils": "^0.0.0",
-    "firstcut-players": "^0.0.0",
-    "firstcut-projects": "^0.0.0",
-    "firstcut-react-autoform": "^0.0.0",
-    "firstcut-retrieve-url": "^0.0.0",
-    "firstcut-schema": "^0.0.0",
-    "firstcut-shoots": "^0.0.0",
-    "firstcut-tasks": "^0.0.0",
-    "firstcut-uploader": "^0.0.0",
-    "firstcut-utils": "^0.0.0",
-    "firstcut-user-session": "^0.0.0",
-    "firstcut-landingpage-requests": "^0.0.0",
-    "firstcut-event-emitter": "^0.0.0"
+    "utf-8-validate": "^4.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.1",
