--- a/apps/firstcut-salesforce-api/package.json
+++ b/apps/firstcut-salesforce-api/package.json
@@ -5,6 +5,11 @@
   "main": "src/index.js",
   "dependencies": {
     "@babel/runtime": "^7.1.2",
-    "lodash": "^4.17.10"
+    "babel": "^6.23.0",
+    "jsforce": "^1.9.1",
+    "lodash": "^4.17.10",
+    "meteor-standalone-random": "^1.0.67",
+    "prettyjson": "^1.2.1",
+    "xml2json": "^0.11.2"
   }
 }
