--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
 				"run:server": "npm --prefix packages/firstcut-marketplace-server run start",
 				"lint": "eslint --cache --ignore-path .gitignore ./packages/*/src",
 				"test": "jest --watch",
-				"build:babel": "lerna exec --parallel -- babel src -d lib --config-file ../../babel.config.js --watch --copy-files --ignore '**/__mocks__/**'",
+				"build:babel": "lerna exec --parallel -- babel src -d lib --config-file ../../babel.config.js --copy-files --ignore '**/__mocks__/**'",
 				"build:webpack": "lerna run build:webpack",
 				"build": "yarn build:babel && yarn build:webpack",
 				"release": "yarn lint && yarn build && lerna publish",
