--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
 		"private": true,
-		"homepage": "https://dmk255.github.io/lerna-webpack-example/",
 		"publishConfig": {
-				"access": "private"
+			"access": "private"
 		},
 		"devDependencies": {
 				"@babel/cli": "^7.0.0-beta.51",
@@ -52,36 +51,25 @@
 				"clean:babel": "rm -rf packages/*/lib",
 				"deploy": "gh-pages -d packages/orchestra/dist"
 		},
-		"dependencies": {
-				"meteor-standalone-random": "^1.0.67",
-				"soap": "^0.24.0"
-		},
 		"workspaces": [
 				"packages/firstcut-*"
 		],
 		"jest": {
 				"moduleNameMapper": {
-						"meteor/meteor": "<rootDir>/jest/mocks/meteor.mock.js",
-						"meteor/mongo": "<rootDir>/jest/mocks/mongo.mock.js",
-						"meteor/http": "<rootDir>/jest/mocks/http.mock.js",
-						"meteor/accounts-base": "<rootDir>/jest/mocks/accounts-base.mock.js",
-						"meteor/universe:i18n": "<rootDir>/jest/mocks/i18n.mock.js",
-						"meteor/react-meteor-data": "<rootDir>/jest/mocks/meteordata.mock.js",
-						"semantic-ui-react": "<rootDir>/jest/mocks/semantic-ui.mock.js",
-						"meteor/mdg:validated-method": "<rootDir>/jest/mocks/validatedmethod.mock.js"
+					"semantic-ui-react": "<rootDir>/jest/mocks/semantic-ui.mock.js"
 				},
 				"setupFiles": [
-						"<rootDir>/jest/setup.js"
+					"<rootDir>/jest/setup.js"
 				],
 				"testMatch": [
-						"**/__tests__/**/*.js?(x)",
-						"**/?(*.)+(spec|test|jest).js?(x)"
+					"**/__tests__/**/*.js?(x)",
+					"**/?(*.)+(spec|test|jest).js?(x)"
 				],
 				"testPathIgnorePatterns": [
-						"/node_modules/",
-						"/apps/",
-						"/test_meteor/",
-						"/lib/"
+					"/node_modules/",
+					"/apps/",
+					"/test_meteor/",
+					"/lib/"
 				]
 		}
 }
