--- a/packages/firstcut-project-templates/package.json
+++ b/packages/firstcut-project-templates/package.json
@@ -24,6 +24,7 @@
     "url": "https://github.com/FirstCut/firstcut-monorepo/issues"
   },
   "dependencies": {
+    "graphql-tag": "^2.10.0",
     "lodash": "^4.17.11"
   }
 }
