--- a/package.json
+++ b/package.json
@@ -46,10 +46,11 @@
 				"lint": "eslint --cache --ignore-path .gitignore ./packages/*/src",
 				"test": "jest --watch",
 				"build:babel": "lerna exec --parallel -- babel src -d lib --config-file ../../babel.config.js --copy-files --ignore '**/__mocks__/**'",
+				"watch:babel": "lerna exec --parallel -- babel src -d lib --config-file ../../babel.config.js --copy-files --watch --ignore '**/__mocks__/**'",
 				"build:webpack": "lerna run build:webpack",
 				"build": "yarn build:babel && yarn build:webpack",
 				"release": "yarn lint && yarn build && lerna publish",
-				"watch": "yarn clean:babel | lerna run build | yarn build:babel",
+				"watch": "yarn clean:babel | lerna run build | yarn watch:babel",
 				"predeploy": "yarn build",
 				"clean:babel": "rm -rf packages/*/lib",
 				"deploy": "gh-pages -d packages/orchestra/dist"
