--- a/packages/firstcut-marketplace-client/package.json
+++ b/packages/firstcut-marketplace-client/package.json
@@ -7,6 +7,7 @@
     "cors": "^2.8.5",
     "express-graphql": "^0.7.1",
     "firstcut-analytics": "^1.0.0",
+    "firstcut-marketplace-server": "^1.0.0",
     "firstcut-ui": "^1.0.0",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
