--- a/packages/firstcut-marketplace-server/package.json
+++ b/packages/firstcut-marketplace-server/package.json
@@ -25,9 +25,12 @@
     "url": "https://github.com/FirstCut/firstcut-monorepo/issues"
   },
   "dependencies": {
-    "apollo-server": "^2.2.2",
     "firstcut-project-requests": "^1.0.0",
     "firstcut-project-templates": "^1.0.0",
+    "graphql-middleware": "^2.0.2",
+    "graphql-tag": "^2.10.0",
+    "graphql-tools": "^4.0.3",
+    "graphql-yoga": "^1.16.7",
     "lodash": "^4.17.11",
     "mongodb": "^3.1.10"
   }
