--- a/packages/firstcut-event-handler/package.json
+++ b/packages/firstcut-event-handler/package.json
@@ -24,5 +24,7 @@
     "url": "https://github.com/FirstCut/firstcut-monorepo/issues"
   },
   "dependencies": {
+    "firstcut-slack": "^0.0.0",
+    "immutable": "^4.0.0-rc.12"
   }
 }
