--- a/packages/firstcut-project-requests/package.json
+++ b/packages/firstcut-project-requests/package.json
@@ -1,7 +1,7 @@
 {
   "name": "firstcut-project-requests",
   "version": "1.0.0",
-  "description": "> TODO: description",
+  "description": "Graphql schemas and resolvers for project requests",
   "author": "Lucy Richards <lucyannerichards@gmail.com>",
   "homepage": "https://dmk255.github.io/lerna-webpack-example/tree/master/packages/firstcut-project-requests#readme",
   "license": "ISC",
