production run and build for client

--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -2,7 +2,7 @@ FROM node:11.2.0
 WORKDIR /usr/app
 
 COPY package.json .
-RUN npm install -g lerna react-scripts
+RUN npm install -g lerna react-scripts serve
 COPY . .
 
 RUN npm run build:babel && lerna bootstrap
