--- a/packages/firstcut-marketplace-client/package.json
+++ b/packages/firstcut-marketplace-client/package.json
@@ -2,6 +2,7 @@
   "name": "firstcut-marketplace-client",
   "version": "0.1.0",
   "description": "React with Apollo Client front end for the marketplace webapp",
+  "homepage": "https://marketplace.firstcut.io",
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.1.21",
@@ -23,6 +24,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-prod": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
