--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -2,8 +2,9 @@ FROM node:11.2.0
 WORKDIR /usr/app
 
 COPY package.json .
-RUN npm install -g lerna react-scripts
+RUN npm install -g lerna react-scripts gulp
 COPY . .
 
 RUN npm run build:babel && lerna bootstrap
+EXPOSE 4000
 CMD npm run run:server
