--- a/package.json
+++ b/package.json
@@ -16,23 +16,23 @@
 				"babel-jest": "^23.0.0-alpha.0",
 				"babel-loader": "^8.0.0-beta",
 				"babel-polyfill": "^6.26.0",
-				"concurrently": "^3.5.1",
+				"concurrently": "^4.1.0",
 				"enzyme": "^3.7.0",
 				"enzyme-adapter-react-16": "^1.7.0",
 				"eslint": "5.6.0",
 				"eslint-config-airbnb": "^17.0.0",
 				"eslint-plugin-import": "^2.13.0",
-				"eslint-plugin-jest": "^21.15.0",
+				"eslint-plugin-jest": "^22.1.0",
 				"eslint-plugin-jsx-a11y": "^6.1.1",
 				"eslint-plugin-react": "^7.10.0",
 				"html-loader": "^0.5.5",
 				"html-webpack-plugin": "^3.0.6",
 				"jest": "^23.6.0",
-				"lerna": "^3.4.0",
+				"lerna": "^3.5.0",
 				"source-map-loader": "^0.2.3",
 				"waait": "^1.0.2",
 				"webpack": "4.19.1",
-				"webpack-cli": "^2.0.12",
+				"webpack-cli": "^3.1.2",
 				"webpack-dev-server": "3.1.9"
 		},
 		"scripts": {
@@ -52,18 +52,26 @@
 				"build": "yarn build:babel && yarn build:webpack",
 				"release": "yarn lint && yarn build && lerna publish",
 				"watch": "yarn clean:babel | lerna run build | yarn watch:babel",
+				"install:semantic-ui": "./scripts/installsemantic",
 				"predeploy": "yarn build",
 				"clean:babel": "rm -rf packages/*/lib",
 				"deploy": "gh-pages -d packages/orchestra/dist"
 		},
-		"workspaces": [
-				"packages/firstcut-*"
-		],
+		"workspaces": {
+				"packages": [
+						"packages/*"
+				],
+				"nohoist": [
+						"**/semantic-ui"
+				]
+		},
 		"jest": {
 				"moduleNameMapper": {
-					"\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+						"\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
 				},
-				"setupFiles": ["<rootDir>/jest.setup.js"],
+				"setupFiles": [
+						"<rootDir>/jest.setup.js"
+				],
 				"testMatch": [
 						"**/__tests__/**/*.js?(x)",
 						"**/?(*.)+(spec|test|jest).js?(x)"
@@ -74,5 +82,8 @@
 						"/test_meteor/",
 						"/lib/"
 				]
+		},
+		"dependencies": {
+				"babel-plugin-transform-class-properties": "^6.24.1"
 		}
 }
