--- a/packages/firstcut-marketplace-client/package.json
+++ b/packages/firstcut-marketplace-client/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://marketplace.firstcut.io",
   "private": true,
   "dependencies": {
-    "apollo-boost": "^0.1.21",
+    "apollo-boost": "0.1.22",
     "cors": "^2.8.5",
     "express-graphql": "^0.7.1",
     "firstcut-analytics": "^1.0.0",
@@ -14,7 +14,7 @@
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "nodemon": "^1.18.6",
-    "npm-run-all": "^4.1.3",
+    "npm-run-all": "4.1.5",
     "react": "^16.6.3",
     "react-apollo": "^2.3.1",
     "react-dom": "^16.6.3",
