--- a/packages/firstcut-marketplace-server/package.json
+++ b/packages/firstcut-marketplace-server/package.json
@@ -31,7 +31,7 @@
     "graphql-middleware": "^2.0.2",
     "graphql-tag": "^2.10.0",
     "graphql-tools": "^4.0.3",
-    "graphql-yoga": "^1.16.7",
+    "graphql-yoga": "1.16.7",
     "lodash": "^4.17.11",
     "mongodb": "^3.1.10"
   }
